--- a/TouristHelper/TouristHelper/Base.lproj/Main.storyboard
+++ b/TouristHelper/TouristHelper/Base.lproj/Main.storyboard
@@ -36,9 +36,9 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jxk-DW-Xcx" userLabel="MapView">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eTq-np-xq2">
-                                <rect key="frame" x="0.0" y="570" width="46" height="30"/>
-                                <state key="normal" title="Button">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eTq-np-xq2">
+                                <rect key="frame" x="16" y="540" width="50" height="50"/>
+                                <state key="normal" image="settings-50-png-blur">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -48,14 +48,27 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eTq-np-xq2" secondAttribute="bottom" id="RYc-L3-QrB"/>
+                            <constraint firstItem="jxk-DW-Xcx" firstAttribute="leading" secondItem="eTq-np-xq2" secondAttribute="trailing" constant="-66" id="9j3-Xn-K3f"/>
+                            <constraint firstItem="eTq-np-xq2" firstAttribute="top" secondItem="jxk-DW-Xcx" secondAttribute="bottom" constant="-60" id="AQt-8p-mk8"/>
+                            <constraint firstItem="jxk-DW-Xcx" firstAttribute="leading" secondItem="eTq-np-xq2" secondAttribute="trailing" constant="-56" id="LZf-qD-OmA"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eTq-np-xq2" secondAttribute="bottom" constant="10" id="RYc-L3-QrB"/>
+                            <constraint firstItem="jxk-DW-Xcx" firstAttribute="bottom" secondItem="eTq-np-xq2" secondAttribute="bottom" constant="20" id="a6e-D2-0zb"/>
                             <constraint firstItem="jxk-DW-Xcx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ajA-xO-rEc"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eTq-np-xq2" secondAttribute="bottom" id="e26-Z6-zDJ"/>
-                            <constraint firstItem="eTq-np-xq2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-16" id="jcq-qa-qI1"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="eTq-np-xq2" secondAttribute="bottom" constant="25" id="e26-Z6-zDJ"/>
+                            <constraint firstItem="eTq-np-xq2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="jcq-qa-qI1"/>
                             <constraint firstAttribute="height" secondItem="jxk-DW-Xcx" secondAttribute="height" id="kn9-BI-3Mr"/>
                             <constraint firstAttribute="width" secondItem="jxk-DW-Xcx" secondAttribute="width" id="lLJ-lp-EHO"/>
                             <constraint firstItem="jxk-DW-Xcx" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="y8o-jR-ynq"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="LZf-qD-OmA"/>
+                                <exclude reference="a6e-D2-0zb"/>
+                                <exclude reference="jcq-qa-qI1"/>
+                                <exclude reference="RYc-L3-QrB"/>
+                                <exclude reference="e26-Z6-zDJ"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="0Xf-Q2-CM5"/>
                     <connections>
@@ -93,4 +106,7 @@
             <point key="canvasLocation" x="1364" y="-164"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="settings-50-png-blur" width="50" height="50"/>
+    </resources>
 </document>
