--- a/TouristHelper/TouristHelper/CustomInfoView.xib
+++ b/TouristHelper/TouristHelper/CustomInfoView.xib
@@ -32,22 +32,22 @@
                     <rect key="frame" x="90" y="90" width="20" height="20"/>
                 </activityIndicatorView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder_location" translatesAutoresizingMaskIntoConstraints="NO" id="8Av-cF-WV3">
-                    <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
+                    <rect key="frame" x="0.0" y="6" width="200" height="100"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="8Av-cF-WV3" firstAttribute="centerY" secondItem="OCf-9m-Z7a" secondAttribute="centerY" constant="-50" id="8Px-7k-BoM"/>
+                <constraint firstItem="8Av-cF-WV3" firstAttribute="centerY" secondItem="OCf-9m-Z7a" secondAttribute="centerY" constant="-44" id="8Px-7k-BoM"/>
                 <constraint firstItem="8Av-cF-WV3" firstAttribute="centerX" secondItem="OCf-9m-Z7a" secondAttribute="centerX" id="BDb-oX-Kai"/>
                 <constraint firstItem="OyA-cL-eKs" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="GNg-gj-qde"/>
                 <constraint firstAttribute="trailing" secondItem="gHR-vu-lfG" secondAttribute="trailing" constant="8" id="Jfa-HU-XFr"/>
                 <constraint firstItem="5gu-of-X1U" firstAttribute="top" secondItem="gHR-vu-lfG" secondAttribute="bottom" constant="-4" id="PFS-ea-TZv"/>
                 <constraint firstItem="gHR-vu-lfG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="Q7Q-Ze-9Au"/>
                 <constraint firstItem="8Av-cF-WV3" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="RID-RF-qkq"/>
-                <constraint firstItem="8Av-cF-WV3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="SdP-oJ-zzz"/>
+                <constraint firstItem="8Av-cF-WV3" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="6" id="SdP-oJ-zzz"/>
                 <constraint firstItem="OyA-cL-eKs" firstAttribute="top" secondItem="5gu-of-X1U" secondAttribute="bottom" constant="2" id="YSg-wo-CLA"/>
                 <constraint firstItem="8Av-cF-WV3" firstAttribute="centerX" secondItem="gHR-vu-lfG" secondAttribute="centerX" id="cRj-7K-VVe"/>
-                <constraint firstItem="8Av-cF-WV3" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="-50" id="csH-4s-OLM"/>
+                <constraint firstItem="8Av-cF-WV3" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" constant="-44" id="csH-4s-OLM"/>
                 <constraint firstItem="gHR-vu-lfG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="102" id="dNk-qj-FVU"/>
                 <constraint firstAttribute="bottom" secondItem="OyA-cL-eKs" secondAttribute="bottom" constant="13" id="deb-Bo-g5R"/>
                 <constraint firstItem="5gu-of-X1U" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="e9g-rD-tYE"/>
