--- a/TouristHelper/TouristHelper/Base.lproj/LaunchScreen.xib
+++ b/TouristHelper/TouristHelper/Base.lproj/LaunchScreen.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,31 +10,54 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2015 IttyBIttyApps. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
-                    <rect key="frame" x="20" y="439" width="441" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tourist Helper" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="31" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
+                    <rect key="frame" x="68" y="144" width="332" height="63"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="52"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TouristHelper" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="20" y="140" width="441" height="43"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder_location" translatesAutoresizingMaskIntoConstraints="NO" id="6Ut-sc-Pr3">
+                    <rect key="frame" x="212" y="107" width="56" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="EDr-2S-nDe"/>
+                        <constraint firstAttribute="width" constant="56" id="KfW-f7-hIX"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
-                <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
-                <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
-                <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
+                <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="6Ut-sc-Pr3" secondAttribute="bottom" constant="-13" id="AqD-BX-erR"/>
+                <constraint firstAttribute="centerY" secondItem="6Ut-sc-Pr3" secondAttribute="centerY" constant="111" id="BfJ-vT-SF6"/>
+                <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="6Ut-sc-Pr3" secondAttribute="bottom" constant="-10" id="FC3-mB-RMP"/>
+                <constraint firstAttribute="centerY" secondItem="6Ut-sc-Pr3" secondAttribute="centerY" constant="108" id="KQG-mj-sWO"/>
+                <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="6Ut-sc-Pr3" secondAttribute="bottom" constant="-10" id="LXp-Ux-1XC"/>
+                <constraint firstAttribute="centerX" secondItem="6Ut-sc-Pr3" secondAttribute="centerX" id="Z0n-0u-HR6"/>
+                <constraint firstAttribute="centerX" secondItem="6Ut-sc-Pr3" secondAttribute="centerX" constant="-27" id="Zqs-cs-qjp"/>
+                <constraint firstAttribute="trailing" secondItem="6Ut-sc-Pr3" secondAttribute="trailing" constant="27" id="eZg-Ph-iP2"/>
+                <constraint firstAttribute="trailing" secondItem="kId-c2-rCX" secondAttribute="trailing" constant="80" id="fbn-fs-bCh"/>
+                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="68" id="fvb-Df-36g"/>
+                <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="6Ut-sc-Pr3" secondAttribute="bottom" constant="-10" id="i2s-8R-TBf"/>
+                <constraint firstItem="6Ut-sc-Pr3" firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="wKn-uV-fac"/>
+                <constraint firstItem="6Ut-sc-Pr3" firstAttribute="bottom" secondItem="kId-c2-rCX" secondAttribute="bottom" constant="-6" id="xl7-0Q-h6F"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="FC3-mB-RMP"/>
+                    <exclude reference="LXp-Ux-1XC"/>
+                    <exclude reference="i2s-8R-TBf"/>
+                    <exclude reference="BfJ-vT-SF6"/>
+                    <exclude reference="Zqs-cs-qjp"/>
+                    <exclude reference="eZg-Ph-iP2"/>
+                    <exclude reference="wKn-uV-fac"/>
+                    <exclude reference="xl7-0Q-h6F"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
+    <resources>
+        <image name="placeholder_location" width="512" height="512"/>
+    </resources>
 </document>
